[package]
name = "hld"
version = "0.3.0"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>", "Sylvain Joubert <joubert.sy@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["std"] }
glob = "0.3"
fs2 = "0.4"
rayon = "1.0"
maplit = "1.0"
bincode = "1.2"
blake2-rfc = "0.2"
directories = "5.0"
reflink = "0.1"
pretty-bytes = "0.2"
filetime = "0.2"
itertools = "0.12"
thiserror = "1.0.56"
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.4.5"
ocli = "0.1.0"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"
assert_fs = "0.12"
lipsum = "0.6"
escargot = "0.5"

[features]
kcov = []
simd = ["blake2-rfc/simd_opt"]

[profile.release]
strip = "symbols"
