[package]
name = "hld"
version = "0.3.0"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>", "Sylvain Joubert <joubert.sy@gmail.com>"]
edition = "2021"
description = "Hard Link Deduplicator"
readme = "README.md"
repository = "https://github.com/glehmann/hld.git"
homepage = "https://github.com/glehmann/hld/"
documentation = "https://github.com/glehmann/hld/"
license = "MIT"
keywords = ["cli", "deduplication"]

[dependencies]
log = { version = "0.4", features = ["std"] }
glob = "0.3"
fs2 = "0.4"
rayon = "1.10"
maplit = "1.0"
bincode = "1.2"
directories = "5.0"
reflink-copy = "0.1"
pretty-bytes = "0.2"
filetime = "0.2"
itertools = "0.12"
thiserror = "1.0.59"
clap = { version = "4.5.4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4.5.1"
ocli = "0.1.0"
strum = { version = "0.26.2", features = ["derive"] }
blake3 = { version = "1.5.1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
lipsum = "0.9"
escargot = "0.5"

[features]
kcov = []

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
